# Shamrock

./: .clang-tidy  .mailmap  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
src/coala/: CMakeLists.txt  GQ_legendre_nodes_weights.cpp  GQ_legendre_nodes_weights.hpp  L2proj_GQ.cpp  L2proj_GQ.hpp  coala.cpp  compute_coag.cpp  compute_coag.hpp  generate_flux_intflux.cpp  generate_flux_intflux.hpp  generate_gij.cpp  generate_gij.hpp  generate_tabflux_tabintflux.cpp  generate_tabflux_tabintflux.hpp  init_grid.cpp  init_grid.hpp  iterate_coag.cpp  iterate_coag.hpp  limiter.cpp  limiter.hpp  math_functions.cpp  math_functions.hpp  options.hpp  polynomials_legendre.cpp  polynomials_legendre.hpp  reconstruction_gh.cpp  reconstruction_gh.hpp  setup.cpp  setup.hpp  solver_DG.cpp  solver_DG.hpp
src/coala/kernel_approx/flux/: flux_components.cpp  flux_components.hpp  flux_function.cpp  flux_function.hpp
src/coala/kernel_approx/intflux/termA/: termA_intflux_components.cpp  termA_intflux_components.hpp  termA_intflux_function.cpp  termA_intflux_function.hpp
src/coala/kernel_approx/intflux/termB/: termB_intflux_components.cpp  termB_intflux_components.hpp  termB_intflux_function.cpp  termB_intflux_function.hpp
src/shamdag/: CMakeLists.txt  Design.md
src/shamdag/include/shamdag/: IDataEdge.hpp  INode.hpp  graph2dot.hpp  graph2tex.hpp  shamdag.hpp
src/shamdag/src/: IDataEdge.cpp  graph2dot.cpp  graph2tex.cpp  shamdag.cpp
src/shammodels/: CMakeLists.txt
src/shammodels/amr/basegodunov/: Solver.cpp
src/shammodels/amr/basegodunov/modules/: ComputeFlux.cpp  ComputeFluxUtilities.hpp  ComputeGradient.hpp
src/shammodels/common/: CMakeLists.txt
src/shammodels/common/include/shammodels/common/: EOSConfig.hpp  ExtForceConfig.hpp  StepCallbackConfig.hpp  timestep_report.hpp
src/shammodels/common/src/: EOSConfig.cpp  pyAMRGrid.cpp  pyAMRTestModel.cpp  pyCommonUtils.cpp  timestep_report.cpp
src/shammodels/common/src/modules/: AddForceCentralGravPotential.cpp
src/shammodels/gsph/: CMakeLists.txt
src/shammodels/gsph/include/shammodels/gsph/: Model.hpp  Solver.hpp  SolverConfig.hpp
src/shammodels/gsph/src/: Model.cpp  Solver.cpp  SolverConfig.cpp  pyGSPHModel.cpp
src/shammodels/gsph/src/modules/: GSPHGhostHandler.cpp  UpdateDerivs.cpp
src/shammodels/gsph/src/modules/io/: VTKDump.cpp
src/shammodels/nbody/: CMakeLists.txt
src/shammodels/nbody/src/models/: nbody_selfgrav.cpp
src/shammodels/nbody/src/setup/: nbody_setup.cpp
src/shammodels/ramses/: CMakeLists.txt
src/shammodels/ramses/include/shammodels/ramses/: GhostZoneData.hpp  Model.hpp  Solver.hpp  SolverConfig.hpp
src/shammodels/ramses/src/: Model.cpp  Solver.cpp  SolverConfig.cpp  pyRamsesModel.cpp
src/shammodels/ramses/src/modules/: AMRGraphGen.cpp  AMRGridRefinementHandler.cpp  AMRSetup.cpp  AMRSortBlocks.cpp  AMRTree.cpp  AnalysisSodTube.cpp  BlockNeighToCellNeigh.cpp  CGInit.cpp  ComputeAMRLevel.cpp  ComputeCFL.cpp  ComputeCellAABB.cpp  ComputeCellInfos.cpp  ComputeCoordinates.cpp  ComputeCubeCellSizes.cpp  ComputeFlux.cpp  ComputeGradient.cpp  ComputeMass.cpp  ComputeSumOverV.cpp  ComputeTimeDerivative.cpp  ConsToPrim.cpp  ConsToPrimDust.cpp  ConsToPrimGas.cpp  DragIntegrator.cpp  ExchangeGhostLayer.cpp  ExtractGhostLayer.cpp  FaceInterpolate.cpp  FindBlockNeigh.cpp  FindGhostLayerCandidates.cpp  FindGhostLayerIndices.cpp  FuseGhostLayer.cpp  GenGhostZonesLayers.cpp  GenerateGhostLayer.cpp  GhostZones.cpp  GridToMorton.cpp  InterpolateToFace.cpp  MultiGridBuilder.cpp  NodeBuildTrees.cpp  NodeComputeFlux.cpp  ResidualDot.cpp  SlopeLimitedGradient.cpp  (+2 more)
src/shammodels/ramses/src/modules/render/: GridRender.cpp
src/shammodels/sph/: CMakeLists.txt  Model.cpp  Solver.cpp  Solver.hpp  SolverConfig.hpp
src/shammodels/sph/include/shammodels/sph/: BasicSPHGhosts.hpp  Model.hpp  SPHUtilities.hpp  SinkPartStruct.hpp  Solver.hpp  SolverConfig.hpp  SolverLog.hpp  particleGen.hpp
src/shammodels/sph/modules/: CMakeLists.txt  ComputeEos.cpp  NeighbourCache.cpp  RigidBoundaryHandler.cpp  RigidBoundaryHandler.hpp  SolverStorage.hpp  UpdateDustDerivsTVI.cpp  UpdateDustDerivsTVI.hpp
src/shammodels/sph/src/: BasicSPHGhosts.cpp  Model.cpp  SPHUtilities.cpp  Solver.cpp  SolverConfig.cpp  SolverLog.cpp  pyPhantomDump.cpp  pySPHModel.cpp
src/shammodels/sph/src/io/: Phantom2Shamrock.cpp  PhantomDump.cpp  PhantomDumpEOSUtils.cpp  PhantomDumpUtils.cpp
src/shammodels/sph/src/modules/: AnalysisBarycenter.cpp  AnalysisDisc.cpp  AnalysisSodTube.cpp  BuildTrees.cpp  ComputeEos.cpp  ComputeLoadBalanceValue.cpp  ComputeLuminosity.cpp  ComputeNeighStats.cpp  ComputeOmega.cpp  ConservativeCheck.cpp  DiffOperator.cpp  DiffOperatorDtDivv.cpp  ExternalForces.cpp  GetParticlesOutsideSphere.cpp  IterateSmoothingLengthDensity.cpp  IterateSmoothingLengthDensityNeighLim.cpp  IterateSmoothingLengthNumDensity.cpp  IterateSmoothingNumDensity.cpp  KillParticles.cpp  LeapfrogPredict.cpp  LoopSmoothingLengthIter.cpp  NeighbourCache.cpp  NodeComputePressureGrad.cpp  NodeEvolveDustCOALASourceTerm.cpp  NodeUpdateDerivsMonofluidTVA.cpp  NodeUpdateDerivsMonofluidTVI.cpp  NodeUpdateDerivsVaryingAlphaAV.cpp  ParticleInjection.cpp  ParticleReordering.cpp  SPHSetup.cpp  SinkParticlesUpdate.cpp  SolverStorage.cpp  UpdateDerivs.cpp  UpdateViscosity.cpp
src/shammodels/sph/src/modules/io/: VTKDump.cpp
src/shammodels/sph/src/modules/render/: CartesianRender.cpp  RenderFieldGetter.cpp
src/shammodels/sph/src/modules/self_gravity/: ComputeSPHXi.cpp  SGDirectPlummer.cpp  SGDirectSPH.cpp  SGFMMPlummer.cpp  SGMMPlummer.cpp  SGSFMMPlummer.cpp  SGSPHCorrection.cpp
src/shammodels/sph/src/modules/setup/: GeneratorMCDisc.cpp  ModifierApplyCustomWarp.cpp  ModifierApplyDiscWarp.cpp  ModifierFilter.cpp  ModifierOffset.cpp  (+1 more)
src/shammodels/zeus/: CMakeLists.txt
src/shammodels/zeus/src/: Model.cpp  Solver.cpp  pyAMRZeusModel.cpp
src/shammodels/zeus/src/modules/: AMRTree.cpp  AnalysisSodTube.cpp  ComputePressure.cpp  DiffOperator.cpp  FaceFlagger.cpp  GhostZones.cpp  SourceStep.cpp  TransportStep.cpp  ValueLoader.cpp  WriteBack.cpp
(+1351 files in other folders)
